Get element by id added

--- a/tutorial.html
+++ b/tutorial.html
@@ -7,7 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-      
+    <button onclick="button()">Click Me</button>
+    <h2 id="heading">Aur kya maza ma!!</h2>
   </body>
 </html>
 <script src="tutorial.js"></script>
