--- a/tutorial.html
+++ b/tutorial.html
@@ -7,8 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <button onclick="button()">Click Me</button>
-    <h2 id="heading">Aur kya maza ma!!</h2>
+    <!--<h2 id="heading">Aur kya maza ma!!</h2>!-->
+    <input id="text1" placeholder="Enter anything here!!"> <br>
+    <button onclick="fn()">Click Me</button>
+    
   </body>
 </html>
 <script src="tutorial.js"></script>
