Function is added to check password and username.

--- a/tutorial.html
+++ b/tutorial.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <!--<h2 id="heading">Aur kya maza ma!!</h2>!-->
-    <input id="text1" placeholder="Enter anything here!!"> <br>
+    <input type="text" id="text1" placeholder="Username"> <br><br>
+    <input type="password" id="text2" placeholder="Password"> <br>
+    <br>
     <button onclick="fn()">Click Me</button>
     
   </body>
