Input from radio nutton and printing it to alert box (Dom manipulation)

--- a/tutorial.html
+++ b/tutorial.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <!--<h2 id="heading">Aur kya maza ma!!</h2>!-->
-    <input type="text" id="text1" placeholder="Username"> <br><br>
+   <!-- <input type="text" id="text1" placeholder="Username"> <br><br>
     <input type="password" id="text2" placeholder="Password"> <br>
     <br>
+    !-->
+    <input id="r1" name="grp1" type="radio" value="BMW 320d">BMW 320d</input><br><br>
+    <input id="r2" name="grp1" type="radio" value="Mustang GT">Mustang GT</input><br><br> 
     <button onclick="fn()">Click Me</button>
     
   </body>
