selecting from dropdowmn and printing in alert

--- a/tutorial.html
+++ b/tutorial.html
@@ -12,8 +12,14 @@
     <input type="password" id="text2" placeholder="Password"> <br>
     <br>
     !-->
-    <input id="r1" name="grp1" type="radio" value="BMW 320d">BMW 320d</input><br><br>
-    <input id="r2" name="grp1" type="radio" value="Mustang GT">Mustang GT</input><br><br> 
+    <!--<input id="r1" name="grp1" type="radio" value="BMW 320d">BMW 320d</input><br><br>
+    <input id="r2" name="grp1" type="radio" value="Mustang GT">Mustang GT</input><br><br>!--> 
+    <select id="selection">
+      <option value="Ford">Ford</option>
+      <option value="BMW">BMW</option>
+      <option value="Skoda">Skoda</option>
+      <option value="Toyota">Toyota</option>
+    </select>
     <button onclick="fn()">Click Me</button>
     
   </body>
