--- a/tutorial.html
+++ b/tutorial.html
@@ -8,20 +8,25 @@
   </head>
   <body>
     <!--<h2 id="heading">Aur kya maza ma!!</h2>!-->
-   <!-- <input type="text" id="text1" placeholder="Username"> <br><br>
+    <!-- <input type="text" id="text1" placeholder="Username"> <br><br>
     <input type="password" id="text2" placeholder="Password"> <br>
     <br>
     !-->
     <!--<input id="r1" name="grp1" type="radio" value="BMW 320d">BMW 320d</input><br><br>
-    <input id="r2" name="grp1" type="radio" value="Mustang GT">Mustang GT</input><br><br>!--> 
-    <select id="selection">
+    <input id="r2" name="grp1" type="radio" value="Mustang GT">Mustang GT</input><br><br>!-->
+    <!--<select id="selection">
       <option value="Ford">Ford</option>
       <option value="BMW">BMW</option>
       <option value="Skoda">Skoda</option>
       <option value="Toyota">Toyota</option>
-    </select>
+    </select>!-->
+    <!--<p>This is an paragraph</p>
+    <p>This is an paragraph</p>
+    <p>This is an paragraph</p>
+    <p>This is an paragraph</p>
+    <p>This is an paragraph</p>!-->
+
     <button onclick="fn()">Click Me</button>
-    
   </body>
 </html>
 <script src="tutorial.js"></script>
