manipulating using getelementbyclassname

--- a/tutorial.html
+++ b/tutorial.html
@@ -25,7 +25,12 @@
     <p>This is an paragraph</p>
     <p>This is an paragraph</p>
     <p>This is an paragraph</p>!-->
-
+    <!--<p class="mypara">This is an paragraph 1.</p>
+    <p>This is an paragraph</p>
+    <p class="mypara">This is an paragraph 2.</p>
+    <p>This is an paragraph</p>
+    <p class="mypara">This is an paragraph 3.</p><br><br>
+!-->
     <button onclick="fn()">Click Me</button>
   </body>
 </html>
